# GithubMaker

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  gitignorecreator.py  main.py  setup.cfg  templates.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
GithubMaker/: make.py
tests/: test_make.py
