[metadata]
name = GithubMaker
version = 1.1.2
author = Yagiz Iskirik
author_email = yagiziskirik@icloud.com
description = Creates Github related documents easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yagiziskirik/GithubMaker
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
